--- a/my-chat/src/app/shome/shome.component.html
+++ b/my-chat/src/app/shome/shome.component.html
@@ -24,7 +24,7 @@
     <label><b>Channel Name</b></label>    
     <input type="text" id="ChannelName" placeholder="Channel Name" [(ngModel)]="user.channel" name="user.channel">    
     <br><br>
-    <input type="button" name="createuser" id="createuser" value="Create User" (click)="supercreate(user)">
+    <input type="button" name="createuser" id="createuser" value="Create Group Admin User" (click)="supercreate(user)">
     <input type="button" name="removeuser" id="removeuser" value="Remove User" (click)="superremove(user)">
     <input type="button" name="upgradeuser" id="upgradeuser" value="Upgrade User" (click)="superupgrade(user)">
     <input type="button" name="creategroup" id="creategroup" value="Create Group" (click)="groupcreate(user)">
